--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@remix-run/serve": "^2.15.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express-rate-limit": "^7.5.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.10.1",
     "motion": "^12.4.4",
     "noblox.js": "^6.1.1",
     "node-cache": "^5.1.2",
