--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-rate-limit": "^7.5.0",
     "input-otp": "^1.4.2",
     "isbot": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
     "motion": "^12.4.4",
@@ -74,6 +75,7 @@
     "@remix-run/dev": "^2.15.3",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
