--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-turnstile": "^1.1.4",
     "recharts": "^2.15.1",
+    "redis": "^4.7.0",
     "sonner": "^2.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
